# rag-exploration

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  shell.nix
.dvc/: config
data/pd2_wiki/: .gitignore  dvc.yaml  wiki.projectdiablo2.com_w-20241031-current.xml.dvc
rag_exploration/: cli.py
rag_exploration/data/: preprocess.py
tests/data/: preprocess_test.py
