[project]
name="rag-exploration"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "torch",
    "transformers[torch]",
    "sentence-transformers",
    "datasets",
    "evaluate",
    "pandas",
    "numpy",
    "click",
    "notebook",
    "wikiteam3",
    "dvc",
    "mwparserfromhell",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag_exploration*"]
namespaces = false